<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/optionsLayout">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationLottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            android:layout_marginTop="@dimen/space_view_extra"
            app:lottie_loop="true"
            app:lottie_fileName="medicine.json"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/UIToolkit.Text.BigTitle.Bold.MainPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/onboarding_welcome_title"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_view_big"
            android:layout_marginStart="@dimen/space_view_medium"
            android:layout_marginEnd="@dimen/space_view_medium"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionTextView"
            style="@style/UIToolkit.Text.Body.Regular.MainPurple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_view_little"
            android:layout_marginStart="@dimen/space_view_medium"
            android:layout_marginEnd="@dimen/space_view_medium"
            android:text="@string/onboarding_welcome_description"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_view_medium"
        android:paddingTop="@dimen/space_view_medium"
        android:paddingEnd="@dimen/space_view_medium"
        android:paddingBottom="@dimen/space_view_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/UIToolkit.Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_custom_button"
            android:text="@string/onboarding_login_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            style="@style/UIToolkit.Widget.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_custom_button"
            android:layout_marginTop="@dimen/space_view_medium"
            android:text="@string/onboarding_register_title" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>