<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/UIToolkit.Widget.Toolbar.White"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_toolbar_standard"
            android:minHeight="?actionBarSize"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_baseline_arrow_back"
            app:title="">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/UIToolkit.Widget.Toolbar.White.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/onboarding_login_title" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_view_extra">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hintCPF"
                style="@style/UIToolkit.Text.Body.Regular.Base75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginTop="@dimen/space_view_medium"
                android:layout_marginEnd="@dimen/space_view_medium"
                android:text="@string/onboarding_label_cpf"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:viewBindingIgnore="true"/>

            <EditText
                android:id="@+id/cpfEditText"
                style="@style/UIToolkit.Widget.EditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_custom_edittext"
                android:inputType="text"
                android:layout_marginTop="@dimen/space_view_little"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginEnd="@dimen/space_view_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hintCPF"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hintPassword"
                style="@style/UIToolkit.Text.Body.Regular.Base75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginTop="@dimen/space_view_medium"
                android:layout_marginEnd="@dimen/space_view_medium"
                android:text="@string/onboarding_label_password"
                app:layout_constraintTop_toBottomOf="@+id/cpfEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:viewBindingIgnore="true"/>

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/UIToolkit.Widget.EditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_custom_edittext"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/space_view_little"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginEnd="@dimen/space_view_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hintPassword"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPasswordTextView"
                style="@style/UIToolkit.Text.Caption.Regular.Base75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_login_forgot_password_question"
                android:gravity="center"
                android:layout_marginEnd="@dimen/space_view_medium"
                android:layout_marginTop="@dimen/space_view_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <br.com.laudosmama.uitoolkit.button.LoaderButton
                android:id="@+id/loginButton"
                style="@style/UIToolkit.Widget.Button"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_custom_button"
                android:layout_marginTop="@dimen/space_view_extra"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginEnd="@dimen/space_view_medium"
                app:uitoolkit_title="@string/onboarding_enter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/warn"
                style="@style/UIToolkit.Text.Caption.Regular.Base75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginTop="@dimen/space_view_big"
                android:layout_marginEnd="@dimen/space_view_medium"
                android:text="@string/onboarding_login_warn_to_register"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                tools:viewBindingIgnore="true"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                style="@style/UIToolkit.Widget.Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_custom_button"
                android:layout_marginStart="@dimen/space_view_medium"
                android:layout_marginTop="@dimen/space_view_big"
                android:layout_marginEnd="@dimen/space_view_medium"
                android:text="@string/onboarding_register_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/warn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>